gen/org/byondplugin/DMParser.java
// Generated from DM.g4 by ANTLR 4.7.1
package org.byondplugin;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEWLINE=1, SWITCH=2, IF=3, ELSE=4, FOR=5, WHILE=6, DO=7, BREAK=8, CONTINUE=9, 
		IN=10, VAR=11, CONST=12, DEL=13, RETURN=14, SET=15, TO=16, AS=17, GOTO=18, 
		NEW=19, SPAWN=20, TRY=21, CATCH=22, VERB=23, PROC=24, GLOBAL=25, STATIC=26, 
		ARG=27, TMP=28, OPEN_BRACK=29, CLOSE_BRACK=30, OPEN_PAREN=31, CLOSE_PAREN=32, 
		DOUBLE_DOT=33, DOT=34, COMMA=35, STAR=36, PERCENT=37, SLASH=38, COLON=39, 
		QUESTION_MARK=40, NOT_OP=41, NEG_OP=42, MINUS=43, PLUS=44, INCREMENT=45, 
		DECREMENT=46, POWER=47, LESS_THAN=48, GREATER_THAN=49, LESS_THAN_OR_EQUAL=50, 
		GREATER_THAN_OR_EQUAL=51, SHIFT_LEFT=52, SHIFT_RIGHT=53, EQUAL=54, NOT_EQUAL=55, 
		NOT_EQUAL_2=56, BIT_AND=57, BIT_OR=58, BIT_XOR=59, LOG_AND=60, LOG_OR=61, 
		ASSIGN=62, ADD_ASSIGN=63, SUB_ASSIGN=64, MULT_ASSIGN=65, DIV_ASSIGN=66, 
		MOD_ASSIGN=67, BIT_AND_ASSIGN=68, BIT_OR_ASSIGN=69, XOR_ASSIGN=70, LEFT_SHIFT_ASSIGN=71, 
		RIGHT_SHIFT_ASSIGN=72, SEMICOLON=73, NAME=74, STRING_LITERAL=75, ICON_PATH=76, 
		NUMBER=77, SPACES=78, COMMENT=79, UNKNOWN_CHAR=80, INDENT=81, DEDENT=82;
	public static final int
		RULE_start = 0, RULE_var_stmt = 1, RULE_var_path = 2, RULE_vardef = 3, 
		RULE_inline_var_stmt = 4, RULE_inline_var_path = 5, RULE_classdef = 6, 
		RULE_class_body = 7, RULE_funcdefs = 8, RULE_func_type = 9, RULE_funcdef = 10, 
		RULE_parameters = 11, RULE_parameter = 12, RULE_suite = 13, RULE_stmt = 14, 
		RULE_simple_stmt = 15, RULE_small_stmt = 16, RULE_set_stmt = 17, RULE_del_stmt = 18, 
		RULE_flow_stmt = 19, RULE_compound_stmt = 20, RULE_if_stmt = 21, RULE_dowhile_stmt = 22, 
		RULE_while_stmt = 23, RULE_spawn_stmt = 24, RULE_for_stmt = 25, RULE_foreach_stmt = 26, 
		RULE_break_stmt = 27, RULE_continue_stmt = 28, RULE_return_stmt = 29, 
		RULE_expr = 30, RULE_trailer = 31, RULE_arglist = 32, RULE_value = 33, 
		RULE_new_stmt = 34, RULE_path = 35, RULE_name = 36;
	public static final String[] ruleNames = {
		"start", "var_stmt", "var_path", "vardef", "inline_var_stmt", "inline_var_path", 
		"classdef", "class_body", "funcdefs", "func_type", "funcdef", "parameters", 
		"parameter", "suite", "stmt", "simple_stmt", "small_stmt", "set_stmt", 
		"del_stmt", "flow_stmt", "compound_stmt", "if_stmt", "dowhile_stmt", "while_stmt", 
		"spawn_stmt", "for_stmt", "foreach_stmt", "break_stmt", "continue_stmt", 
		"return_stmt", "expr", "trailer", "arglist", "value", "new_stmt", "path", 
		"name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'switch'", "'if'", "'else'", "'for'", "'while'", "'do'", 
		"'break'", "'continue'", "'in'", "'var'", "'const'", "'del'", "'return'", 
		"'set'", "'to'", "'as'", "'goto'", "'new'", "'spawn'", "'try'", "'catch'", 
		"'verb'", "'proc'", "'global'", "'static'", "'arg'", "'tmp'", "'['", "']'", 
		"'('", "')'", "'..'", "'.'", "','", "'*'", "'%'", "'/'", "':'", "'?'", 
		"'~'", "'!'", "'-'", "'+'", "'++'", "'--'", "'**'", "'<'", "'>'", "'<='", 
		"'>='", "'<<'", "'>>'", "'=='", "'!='", "'<>'", "'&'", "'|'", "'^'", "'&&'", 
		"'||'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", 
		"'^='", "'<<='", "'>>='", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NEWLINE", "SWITCH", "IF", "ELSE", "FOR", "WHILE", "DO", "BREAK", 
		"CONTINUE", "IN", "VAR", "CONST", "DEL", "RETURN", "SET", "TO", "AS", 
		"GOTO", "NEW", "SPAWN", "TRY", "CATCH", "VERB", "PROC", "GLOBAL", "STATIC", 
		"ARG", "TMP", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_PAREN", "CLOSE_PAREN", 
		"DOUBLE_DOT", "DOT", "COMMA", "STAR", "PERCENT", "SLASH", "COLON", "QUESTION_MARK", 
		"NOT_OP", "NEG_OP", "MINUS", "PLUS", "INCREMENT", "DECREMENT", "POWER", 
		"LESS_THAN", "GREATER_THAN", "LESS_THAN_OR_EQUAL", "GREATER_THAN_OR_EQUAL", 
		"SHIFT_LEFT", "SHIFT_RIGHT", "EQUAL", "NOT_EQUAL", "NOT_EQUAL_2", "BIT_AND", 
		"BIT_OR", "BIT_XOR", "LOG_AND", "LOG_OR", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
		"MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "BIT_AND_ASSIGN", "BIT_OR_ASSIGN", 
		"XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", "SEMICOLON", 
		"NAME", "STRING_LITERAL", "ICON_PATH", "NUMBER", "SPACES", "COMMENT", 
		"UNKNOWN_CHAR", "INDENT", "DEDENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<Var_stmtContext> var_stmt() {
			return getRuleContexts(Var_stmtContext.class);
		}
		public Var_stmtContext var_stmt(int i) {
			return getRuleContext(Var_stmtContext.class,i);
		}
		public List<FuncdefsContext> funcdefs() {
			return getRuleContexts(FuncdefsContext.class);
		}
		public FuncdefsContext funcdefs(int i) {
			return getRuleContext(FuncdefsContext.class,i);
		}
		public List<ClassdefContext> classdef() {
			return getRuleContexts(ClassdefContext.class);
		}
		public ClassdefContext classdef(int i) {
			return getRuleContext(ClassdefContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(DMParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DMParser.NEWLINE, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DMVisitor ) return ((DMVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << VAR) | (1L << VERB) | (1L << PROC))) != 0) || _la==NAME) {
				{
				setState(78);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(74);
					var_stmt();
					}
					break;
				case 2:
					{
					setState(75);
					funcdefs();
					}
					break;
				case 3:
					{
					setState(76);
					classdef();
					}
					break;
				case 4:
					{
					setState(77);
					match(NEWLINE);
					}
					break;
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_stmtContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(DMParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(DMParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(DMParser.DEDENT, 0); }
		public List<Var_pathContext> var_path() {
			return getRuleContexts(Var_pathContext.class);
		}
		public Var_pathContext var_path(int i) {
			return getRuleContext(Var_pathContext.class,i);
		}
		public Var_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).enterVar_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).exitVar_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DMVisitor ) return ((DMVisitor<? extends T>)visitor).visitVar_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_stmtContext var_stmt() throws RecognitionException {
		Var_stmtContext _localctx = new Var_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_stmt);
		int _la;
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(VAR);
				setState(84);
				match(NEWLINE);
				setState(85);
				match(INDENT);
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(86);
					var_path();
					}
					}
					setState(89); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==TMP || _la==NAME );
				setState(91);
				match(DEDENT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(VAR);
				setState(94);
				match(SLASH);
				setState(95);
				var_path();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_pathContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(DMParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(DMParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(DMParser.DEDENT, 0); }
		public TerminalNode NAME() { return getToken(DMParser.NAME, 0); }
		public List<Var_pathContext> var_path() {
			return getRuleContexts(Var_pathContext.class);
		}
		public Var_pathContext var_path(int i) {
			return getRuleContext(Var_pathContext.class,i);
		}
		public VardefContext vardef() {
			return getRuleContext(VardefContext.class,0);
		}
		public Var_pathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).enterVar_path(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).exitVar_path(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DMVisitor ) return ((DMVisitor<? extends T>)visitor).visitVar_path(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_pathContext var_path() throws RecognitionException {
		Var_pathContext _localctx = new Var_pathContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_path);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				_la = _input.LA(1);
				if ( !(_la==TMP || _la==NAME) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(99);
				match(NEWLINE);
				setState(100);
				match(INDENT);
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					var_path();
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==TMP || _la==NAME );
				setState(106);
				match(DEDENT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				_la = _input.LA(1);
				if ( !(_la==TMP || _la==NAME) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(109);
				match(SLASH);
				setState(110);
				var_path();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				vardef();
				setState(112);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardefContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(DMParser.NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VardefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).enterVardef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).exitVardef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DMVisitor ) return ((DMVisitor<? extends T>)visitor).visitVardef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardefContext vardef() throws RecognitionException {
		VardefContext _localctx = new VardefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(NAME);
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(117);
				match(ASSIGN);
				setState(118);
				expr(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inline_var_stmtContext extends ParserRuleContext {
		public Inline_var_pathContext inline_var_path() {
			return getRuleContext(Inline_var_pathContext.class,0);
		}
		public Inline_var_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inline_var_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).enterInline_var_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).exitInline_var_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DMVisitor ) return ((DMVisitor<? extends T>)visitor).visitInline_var_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inline_var_stmtContext inline_var_stmt() throws RecognitionException {
		Inline_var_stmtContext _localctx = new Inline_var_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inline_var_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(VAR);
			setState(122);
			match(SLASH);
			setState(123);
			inline_var_path();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inline_var_pathContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(DMParser.NAME, 0); }
		public Inline_var_pathContext inline_var_path() {
			return getRuleContext(Inline_var_pathContext.class,0);
		}
		public VardefContext vardef() {
			return getRuleContext(VardefContext.class,0);
		}
		public Inline_var_pathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inline_var_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).enterInline_var_path(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMListener ) ((DMListener)listener).exitInline_var_path(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DMVisitor ) return ((DMVisitor<? extends T>)visitor).visitInline_var_path(this);
			else return visitor.visitChildren(this);
		}
	}
